--- a/Briefcase2/style.css
+++ b/Briefcase2/style.css
@@ -21,6 +21,22 @@ ul li {
     width: 40%;
 }
 
+.home-button {
+    position: fixed;
+    margin-left: 90%;
+}
+
+.button-top {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    margin-top: 7rem;
+}
+
+.button-top a {
+    color: white;
+}
+
 .header-main-content {
     display: flex;
     margin-left: 2%;
@@ -66,6 +82,14 @@ span {
 .logo-form img {
     width: 100%;
     height: 100%;
+}
+
+option {
+    font-size: 1.5rem;
+}
+
+textarea {
+    font-size: 2.5rem;
 }
 
 .website-title {
